--- a/src/main/resources/assets/cornmagic/lang/en_US.lang
+++ b/src/main/resources/assets/cornmagic/lang/en_US.lang
@@ -1,1 +1,2 @@
-tile.carcinogen.name=Carcinogen Infused Stone
+tile.carcinogenOre.name=Carcinogen Infused Stone
+item.carcinogen.name=Carcinogen Shard
