--- a/src/main/resources/assets/cornmagic/lang/en_US.lang
+++ b/src/main/resources/assets/cornmagic/lang/en_US.lang
@@ -1,2 +1,5 @@
 tile.carcinogenOre.name=Carcinogen Infused Stone
 item.carcinogen.name=Carcinogen Shard
+
+tile.whiteCorn.name=White Corn
+item.whiteCob.name=White Corn Cob
